buttons to fetch and clear the data

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Star Wars API</title>
 </head>
 <body>
+    <h1>What data can the SWAPI Give us?</h1>
+    <button class="fetchData">Fetch Data</button>
+    <button class="clear-button">Clear Data</button>
+    <div class="container"></div>
     <script src="script.js"></script>
 </body>
 </html>
